fixed image overflowing

--- a/app/assets/stylesheets/book-item-box.scss
+++ b/app/assets/stylesheets/book-item-box.scss
@@ -1,44 +1,53 @@
 .book-item-box{
   border: 1px solid #D8D8D8;
+  border-radius: 2px;
+  background-color: white;
   width: 95%;
   height: 85%;
+  margin:auto;
+  display: flex;
+}
+
+
+.book-item-content{
+  width: 85%;
+  height: 75%;
   margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 3fr 1fr;
-  grid-column-gap: 8px;
-  background-color: white;
+  display: flex;
 }
 
 .image-column{
-  display: flex;
+  object-fit: contain;
+  width: 33%;
   justify-content: center;
   align-items: center;
-  grid-area: 2/1/3/2;
 }
 
 .book-info-column{
+  width: 66%;
   display: grid;
+  margin-left: 6px;
   grid-template-rows: 1fr 1fr 1fr 4fr;
-  grid-area: 2/2/3/3;
+}
 
+.book-cover{
+  max-width: 100%;
+  height: 100%;
 }
 
 .book-title{
-  grid-area: 1/1/1/1;
-  margin-top:8px;
+  grid-area: 1/1/2/1;
   font-size: 18px;
   font-weight: bold;
   font-family: "Merriweather", "Georgia", serif;
 }
 .book-author{
-  grid-area: 2/1/2/1;
+  grid-area: 2/1/3/1;
   font-size: 14px;
-  margin-top:3px;
 }
 
 .book-status{
-  grid-area: 3/1/3/1;
+  grid-area: 3/1/4/1;
 }
 .book-description{
   grid-area: 4/1/4/1;
